--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="app">
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-    </div>
+    <header id="main-header">
+      <nav>
+        <ul>
+          <li><img src="/images/home.svg" alt="Home" /> Home</li>
+          <li>
+            <img src="/images/notification.svg" alt="Notifications" />
+            Notifications
+          </li>
+          <li><img src="/images/message.svg" alt="Messages" /> Messages</li>
+        </ul>
+      </nav>
+      <img src="/images/logo.svg" alt="Logo Twitter" />
+      <div>
+        <input type="text" placeholder="Search on Twitter" />
+        <img src="/images/avatar.png" alt="Avatar" />
+        <button>Twitter</button>
+      </div>
+    </header>
   </body>
 </html>
