--- a/index.html
+++ b/index.html
@@ -9,21 +9,31 @@
   </head>
   <body>
     <header id="main-header">
-      <nav>
-        <ul>
-          <li><img src="/images/home.svg" alt="Home" /> Home</li>
-          <li>
-            <img src="/images/notification.svg" alt="Notifications" />
-            Notifications
-          </li>
-          <li><img src="/images/message.svg" alt="Messages" /> Messages</li>
-        </ul>
-      </nav>
-      <img src="/images/logo.svg" alt="Logo Twitter" />
-      <div>
-        <input type="text" placeholder="Search on Twitter" />
-        <img src="/images/avatar.png" alt="Avatar" />
-        <button>Twitter</button>
+      <div class="content">
+        <nav>
+          <ul>
+            <li>
+              <img src="/images/home.svg" alt="Home" />
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <img src="/images/notification.svg" alt="Notifications" />
+              <a href="#">
+                Notifications
+              </a>
+            </li>
+            <li>
+              <img src="/images/message.svg" alt="Messages" />
+              <a href="#">Messages</a>
+            </li>
+          </ul>
+        </nav>
+        <img src="/images/logo.svg" alt="Logo Twitter" />
+        <div class="side">
+          <input type="text" placeholder="Search on Twitter" />
+          <img src="/images/avatar.png" alt="Avatar" />
+          <button>Twitter</button>
+        </div>
       </div>
     </header>
   </body>
