--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
         </div>
       </div>
     </header>
+    <div class="banner">
+      <h1>Twitter do Igor</h1>
+    </div>
   </body>
 </html>
