Added profile section

--- a/index.html
+++ b/index.html
@@ -65,5 +65,66 @@
         </div>
       </div>
     </div>
+
+    <div class="wrapper-content content">
+      <aside class="profile">
+        <img class="avatar" src="images/avatar.png" alt="Igor Martins" />
+        <h1>Igor Martins</h1>
+        <span>@igormartins</span>
+        <p>Web Developer & I.T. Technician</p>
+        <ul class="list">
+          <li><img src="images/place.svg" alt="Place" />Tocantins, Brazil</li>
+          <li>
+            <img src="images/url.svg" alt="Url" /><a
+              href="https://github.com/igorsouza-dev"
+              >github.com/igorsouza-dev</a
+            >
+          </li>
+          <li>
+            <img src="images/joined.svg" alt="Joined" />Joined November 2019
+          </li>
+          <li><img src="images/born.svg" alt="Born" />Born May 13th, 2019</li>
+        </ul>
+
+        <div class="widget followers">
+          <p>
+            <img src="images/followers.svg" alt="Followers" />
+            74 followers that you know
+          </p>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+        <div class="widget images">
+          <p>
+            <img src="images/images.svg" alt="Images" />
+            266 photos and videos
+          </p>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </aside>
+      <section class="timeline">
+        Timeline
+      </section>
+      <aside class="widgets">
+        Widgets
+      </aside>
+    </div>
   </body>
 </html>
