--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </li>
         </ul>
         <div class="actions">
-          <button>Follow</button>
+          <button class="follow-button">Follow</button>
           <img src="/images/more.svg" alt="More" />
         </div>
       </div>
@@ -123,7 +123,46 @@
         Timeline
       </section>
       <aside class="widgets">
-        Widgets
+        <div class="widget follow">
+          <div class="title">
+            <strong>Who to follow</strong>
+            <a href="">Refresh</a>
+            <a href="">View all</a>
+          </div>
+          <ul>
+            <li>
+              <div class="follower-profile">
+                <img src="images/avatar.png" alt="Avatar" />
+                <div class="info">
+                  <strong>Spade <span>@spade_be</span></strong>
+                  <button class="follow-button">Follow</button>
+                </div>
+              </div>
+              <a href="">X</a>
+            </li>
+            <li>
+              <div class="follower-profile">
+                <img src="images/avatar.png" alt="Avatar" />
+                <div class="info">
+                  <strong>Spade <span>@spade_be</span></strong>
+                  <button class="follow-button">Follow</button>
+                </div>
+              </div>
+              <a href="">X</a>
+            </li>
+            <li>
+              <div class="follower-profile">
+                <img src="images/avatar.png" alt="Avatar" />
+                <div class="info">
+                  <strong>Spade <span>@spade_be</span></strong>
+                  <button class="follow-button">Follow</button>
+                </div>
+              </div>
+              <a href="">X</a>
+            </li>
+          </ul>
+        </div>
+        <div class="widget trends"></div>
       </aside>
     </div>
   </body>
