--- a/index.html
+++ b/index.html
@@ -160,9 +160,38 @@
               </div>
               <a href="">X</a>
             </li>
+            <li>
+              <a href="" class="find">Find Friends</a>
+            </li>
+          </ul>
+          <div class="find"></div>
+        </div>
+        <div class="widget trends">
+          <div class="title">
+            <strong>Trends</strong>
+            <a href="">Change</a>
+          </div>
+          <ul>
+            <li>
+              <a href="">#SportsInfoDay</a>
+            </li>
+            <li>
+              <a href="">#womenleaders</a>
+            </li>
+            <li>
+              <a href="">#UxDesign</a>
+            </li>
+            <li>
+              <a href="">#UiDesign</a>
+            </li>
+            <li>
+              <a href="">#SportsInfoDay</a>
+            </li>
+            <li>
+              <a href="">#SportsInfoDay</a>
+            </li>
           </ul>
         </div>
-        <div class="widget trends"></div>
       </aside>
     </div>
   </body>
