--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
             <span>Favorites</span>
             <strong>45</strong>
           </li>
+          <li>
+            <span>Lists</span>
+            <strong>8</strong>
+          </li>
+          <li>
+            <span>Moments</span>
+            <strong>0</strong>
+          </li>
         </ul>
         <div class="actions">
           <button class="follow-button">Follow</button>
@@ -191,6 +199,15 @@
               <a href="">#SportsInfoDay</a>
             </li>
           </ul>
+        </div>
+        <div class="copyright">
+          © 2019 Twitter
+          <a href="">About</a>
+          <a href="">Help Center</a>
+          <a href="">Terms</a>
+          <a href="">Privacy policy</a>
+          <a href="">Cookies</a>
+          <a href="">Ads info</a>
         </div>
       </aside>
     </div>
