--- a/index.html
+++ b/index.html
@@ -128,7 +128,237 @@
         </div>
       </aside>
       <section class="timeline">
-        Timeline
+        <nav>
+          <a href="" class="active">Tweets</a>
+          <a href="">Tweets and replies</a>
+          <a href="">Medias</a>
+        </nav>
+        <ul class="tweets">
+          <li>
+            <img src="images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Igor Martins <span>@igormartins</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                fringilla sem eget convallis luctus. Mauris vitae tincidunt
+                lorem. Phasellus at tristique arcu, ut malesuada quam.
+              </p>
+              <div class="actions">
+                <a href=""><img src="images/comments.svg" alt="comments" />2</a>
+                <a href=""><img src="images/retweet.svg" alt="Retweets" />23</a>
+                <a href=""><img src="images/like.svg" alt="Likes" />33</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Igor Martins <span>@igormartins</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                fringilla sem eget convallis luctus. Mauris vitae tincidunt
+                lorem. Phasellus at tristique arcu, ut malesuada quam.
+              </p>
+              <div class="actions">
+                <a href=""><img src="images/comments.svg" alt="comments" />2</a>
+                <a href=""><img src="images/retweet.svg" alt="Retweets" />23</a>
+                <a href=""><img src="images/like.svg" alt="Likes" />33</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Igor Martins <span>@igormartins</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                fringilla sem eget convallis luctus. Mauris vitae tincidunt
+                lorem. Phasellus at tristique arcu, ut malesuada quam.
+              </p>
+              <div class="actions">
+                <a href=""><img src="images/comments.svg" alt="comments" />2</a>
+                <a href=""><img src="images/retweet.svg" alt="Retweets" />23</a>
+                <a href=""><img src="images/like.svg" alt="Likes" />33</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Igor Martins <span>@igormartins</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                fringilla sem eget convallis luctus. Mauris vitae tincidunt
+                lorem. Phasellus at tristique arcu, ut malesuada quam.
+              </p>
+              <div class="actions">
+                <a href=""><img src="images/comments.svg" alt="comments" />2</a>
+                <a href=""><img src="images/retweet.svg" alt="Retweets" />23</a>
+                <a href=""><img src="images/like.svg" alt="Likes" />33</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Igor Martins <span>@igormartins</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                fringilla sem eget convallis luctus. Mauris vitae tincidunt
+                lorem. Phasellus at tristique arcu, ut malesuada quam.
+              </p>
+              <div class="actions">
+                <a href=""><img src="images/comments.svg" alt="comments" />2</a>
+                <a href=""><img src="images/retweet.svg" alt="Retweets" />23</a>
+                <a href=""><img src="images/like.svg" alt="Likes" />33</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Igor Martins <span>@igormartins</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                fringilla sem eget convallis luctus. Mauris vitae tincidunt
+                lorem. Phasellus at tristique arcu, ut malesuada quam.
+              </p>
+              <div class="actions">
+                <a href=""><img src="images/comments.svg" alt="comments" />2</a>
+                <a href=""><img src="images/retweet.svg" alt="Retweets" />23</a>
+                <a href=""><img src="images/like.svg" alt="Likes" />33</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Igor Martins <span>@igormartins</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                fringilla sem eget convallis luctus. Mauris vitae tincidunt
+                lorem. Phasellus at tristique arcu, ut malesuada quam.
+              </p>
+              <div class="actions">
+                <a href=""><img src="images/comments.svg" alt="comments" />2</a>
+                <a href=""><img src="images/retweet.svg" alt="Retweets" />23</a>
+                <a href=""><img src="images/like.svg" alt="Likes" />33</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Igor Martins <span>@igormartins</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                fringilla sem eget convallis luctus. Mauris vitae tincidunt
+                lorem. Phasellus at tristique arcu, ut malesuada quam.
+              </p>
+              <div class="actions">
+                <a href=""><img src="images/comments.svg" alt="comments" />2</a>
+                <a href=""><img src="images/retweet.svg" alt="Retweets" />23</a>
+                <a href=""><img src="images/like.svg" alt="Likes" />33</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Igor Martins <span>@igormartins</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                fringilla sem eget convallis luctus. Mauris vitae tincidunt
+                lorem. Phasellus at tristique arcu, ut malesuada quam.
+              </p>
+              <div class="actions">
+                <a href=""><img src="images/comments.svg" alt="comments" />2</a>
+                <a href=""><img src="images/retweet.svg" alt="Retweets" />23</a>
+                <a href=""><img src="images/like.svg" alt="Likes" />33</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Igor Martins <span>@igormartins</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                fringilla sem eget convallis luctus. Mauris vitae tincidunt
+                lorem. Phasellus at tristique arcu, ut malesuada quam.
+              </p>
+              <div class="actions">
+                <a href=""><img src="images/comments.svg" alt="comments" />2</a>
+                <a href=""><img src="images/retweet.svg" alt="Retweets" />23</a>
+                <a href=""><img src="images/like.svg" alt="Likes" />33</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Igor Martins <span>@igormartins</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                fringilla sem eget convallis luctus. Mauris vitae tincidunt
+                lorem. Phasellus at tristique arcu, ut malesuada quam.
+              </p>
+              <div class="actions">
+                <a href=""><img src="images/comments.svg" alt="comments" />2</a>
+                <a href=""><img src="images/retweet.svg" alt="Retweets" />23</a>
+                <a href=""><img src="images/like.svg" alt="Likes" />33</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Igor Martins <span>@igormartins</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                fringilla sem eget convallis luctus. Mauris vitae tincidunt
+                lorem. Phasellus at tristique arcu, ut malesuada quam.
+              </p>
+              <div class="actions">
+                <a href=""><img src="images/comments.svg" alt="comments" />2</a>
+                <a href=""><img src="images/retweet.svg" alt="Retweets" />23</a>
+                <a href=""><img src="images/like.svg" alt="Likes" />33</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Igor Martins <span>@igormartins</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                fringilla sem eget convallis luctus. Mauris vitae tincidunt
+                lorem. Phasellus at tristique arcu, ut malesuada quam.
+              </p>
+              <div class="actions">
+                <a href=""><img src="images/comments.svg" alt="comments" />2</a>
+                <a href=""><img src="images/retweet.svg" alt="Retweets" />23</a>
+                <a href=""><img src="images/like.svg" alt="Likes" />33</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="images/avatar.png" alt="Avatar" />
+            <div class="info">
+              <strong>Igor Martins <span>@igormartins</span></strong>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                fringilla sem eget convallis luctus. Mauris vitae tincidunt
+                lorem. Phasellus at tristique arcu, ut malesuada quam.
+              </p>
+              <div class="actions">
+                <a href=""><img src="images/comments.svg" alt="comments" />2</a>
+                <a href=""><img src="images/retweet.svg" alt="Retweets" />23</a>
+                <a href=""><img src="images/like.svg" alt="Likes" />33</a>
+              </div>
+            </div>
+          </li>
+        </ul>
       </section>
       <aside class="widgets">
         <div class="widget follow">
